codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_filters_hidden_models.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access other models by running solai -m <model_name> or in your con

› 1. test-visible-model (current)  test-visible-model description

  Press enter to confirm or esc to go back
