codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__overlapping_hook_live_cell_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"{first_running_snapshot}\\n\\n{second_running_snapshot}\\n\\n{older_completed_snapshot}\\n\\n{older_completed_expired_snapshot}\\n\\n{all_completed_lingering_snapshot}\\n\\n{all_completed_snapshot}\")"
---
pre running
live hooks:
• Running PreToolUse hook: checking command policy
history:
<empty>

post running
live hooks:
• Running PreToolUse hook: checking command policy

• Running PostToolUse hook: checking output policy
history:
<empty>

pre completed lingering
live hooks:
• Running PreToolUse hook: checking command policy

• Running PostToolUse hook: checking output policy
history:
<empty>

pre completed after linger
live hooks:
• Running PostToolUse hook: checking output policy
history:
<empty>

all completed lingering
live hooks:
• Running PostToolUse hook: checking output policy
history:
<empty>

all completed
live hooks:
<empty>
history:
<empty>
